--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "profile": "node scripts/switch-profile.js",
+    "config:sync": "node scripts/parse-etcd-from-md.js",
+    "config:sync-live": "node scripts/fetch-etcd-config.js",
+    "dung.pham.demo": "npm run profile -- dung.pham.demo",
+    "hung.dang": "npm run profile -- hung.dang"
   },
   "prettier": {
     "printWidth": 100,
@@ -28,6 +33,8 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ngx-translate/core": "17.0.0",
+    "@ngx-translate/http-loader": "17.0.0",
     "ng-zorro-antd": "^20.4.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
